--- a/src/Components/JobCard.css
+++ b/src/Components/JobCard.css
@@ -1,21 +1,39 @@
+:root {
+    --dark-saturated-cyan: hsl(180, 29%, 50%);
+    --light-grayish-cyan: hsl(180, 52%, 96%);
+    --dark-grayish-cyan: hsl(180, 8%, 52%);
+    --very-dark-grayish-cyan: hsl(180, 14%, 20%);
+}
+
+
 .job-card {
-    margin: 0 auto 1rem auto;
-    width: 80%;
+    width: 70%;
     height: auto;
     background-color: white;
-    border: 1px solid black;
-    border-radius: 5px;    
+    border: 1px solid whitek;
+    border-radius: 4px;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
+    padding: 1rem;
+    box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
+}
+
+.featuredCard {
+    border-left: 7px solid hsl(180, 52%, 38%);
+}
+
+.left-part {
+    display: flex;
+    flex-direction: row;  
 }
 
 .card-logo {
-    height: 70px;
-    width: 70px;
+    height: 65px;
+    width: 65px;
     border-radius: 50%;
-    margin: 0 1rem;
+    /* margin: 0 1rem; */
 }
 
 .designation {
@@ -23,9 +41,14 @@
     font-weight: 1000;
 }
 
+.designation:hover {
+    color: var(--dark-saturated-cyan);
+    cursor: pointer;
+}
+
 .company {
     font-size: 16px;
-    color:  hsl(180, 52%, 38%);
+    color: hsl(180, 52%, 38%);
     font-weight: 1000;
 }
 
@@ -35,6 +58,58 @@
     color: hsl(180, 8%, 52%)
 }
 
+.categories {
+    margin: 0.5rem 0;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    /* padding: 0.5rem; */
+}
+
 .category {
-    margin: 0 0.5rem 0 0;
+    margin: 0.5rem;
+    border-radius: 4px;
+    font-size: 15px;
+    font-weight: 700;
+    height: 1.2rem;
+    border: 1px solid hsl(180, 31%, 95%);
+    padding: 7px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-color: hsl(180, 31%, 95%);
+    color: hsl(180, 29%, 50%);
+}
+
+.category:hover {
+    color: white;
+    background-color: hsl(180, 52%, 38%);
+    cursor: pointer;
+}
+
+@media only screen and (min-width: 0px) {
+    .job-card {
+        margin: 0 auto 2.5rem auto;
+    }
+
+    .left-part {
+        margin-top: -2.5rem;
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-start;
+    }
+}
+
+@media only screen and (min-width: 568px) {
+    .job-card {
+        margin: 0 auto 1.5rem auto;
+    }
+
+    .left-part {
+        margin-top: 0;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+    }
 }
