--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,10 @@
+:root {
+    --dark-saturated-cyan: hsl(180, 29%, 50%);
+    --light-grayish-cyan: hsl(180, 52%, 96%);
+    --dark-grayish-cyan: hsl(180, 8%, 52%);
+    --very-dark-grayish-cyan: hsl(180, 14%, 20%);
+}
+
 .app-bottom {
     position: absolute;
     top: 130px;
@@ -18,6 +25,6 @@
     background-repeat: no-repeat;
 }
 
-.listing-area {
+/* .listing-area {
     margin-top: 2rem;
-}
+} */
