--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@
     left: 0;
     width: 100%;
     /* height: 130px; */
-    background-color: var(--light-grayish-cyan);
+    /* background-color: var(--light-grayish-cyan); */
 }
 
 .app-upper {
