--- a/src/index.css
+++ b/src/index.css
@@ -7,8 +7,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  /* background-color: hsl(180, 52%, 96%); */
   font-size: 15px;
+  background-color: hsl(180, 52%, 96%);
 }
 
 code {
